--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.87.4",
     "axios": "^1.12.2",
     "immer": "^10.1.3",
+    "lucide-react": "^0.544.0",
     "node": "^24.6.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
